# qr-code-generator

./: .gitignore  CLAUDE.md  README.md  install.bat  pyproject.toml  qr-create.bat  start.bat  update.bat
app/: __main__.py  logging_config.py  main.py
app/cli/: arg_parser.py
app/config/: constants.py  settings.py
app/core/: canvas_composer.py  qr_generator.py  qr_options.py
tests/integration/: test_cli_end_to_end.py
tests/unit/: test_arg_parser.py  test_canvas_composer.py  test_qr_generator.py  test_qr_options.py
tools/: run_integration_tests.bat  run_tests.bat
